k8s/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Grafana"
    k8s-app: grafana
spec:
  # On production clusters, consider setting up auth for grafana, and
  # exposing Grafana either using a LoadBalancer or a public IP.
  # type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: grafana
